Updated structure and aesthetics

--- a/manual/source/_templates/google_search.html
+++ b/manual/source/_templates/google_search.html
@@ -1,5 +1,4 @@
-{#
-    google_search.html
+{#  google_search.html
     ~~~~~~~~~~~~~~~~~~~~
 
     Sphinx sidebar template: Google Custom Search box.
@@ -15,7 +14,7 @@
 		<table border="0" align="center" cellpadding="0">
 			<tr>
 				<td>
-					<input type="text"   name="q" value="" />
+					<input type="text"   name="q" value="" size="24"/>
 				</td>
 			</tr>
 			<tr>
